@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.14-dev
 
+s/die/CORE::die/ after exec() to avoid warnings (and therefore
+failures) when someone overrides CORE::die when using Apache-Test
+[William McKee, Stas]
 
 
 
